deploy/kubernetes/tickets-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets-api
  labels:
    app: tickets-api
spec:
  selector:
    app: tickets-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
